overflow issue

--- a/cit261/week06/styles/transform.css
+++ b/cit261/week06/styles/transform.css
@@ -1,6 +1,6 @@
 body {
     background-color: lightblue;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .heading {
